tests/baselines/reference/_caxnc-fn-0003.errors.txt
tests/cases/conformance/_caxnc/_caxnc-fn-0003.ts(7,15): error TS2769: No overload matches this call.
  Overload 1 of 2, '(b: string): "1" | undefined', gave the following error.
    Argument of type 'string | number' is not assignable to parameter of type 'string'.
      Type 'number' is not assignable to type 'string'.
  Overload 2 of 2, '(b: number): undefined', gave the following error.
    Argument of type 'string | number' is not assignable to parameter of type 'number'.
      Type 'string' is not assignable to type 'number'.
tests/cases/conformance/_caxnc/_caxnc-fn-0003.ts(14,24): error TS2769: No overload matches this call.
  Overload 1 of 2, '(b: string): "1"', gave the following error.
    Argument of type 'string | number' is not assignable to parameter of type 'string'.
      Type 'number' is not assignable to type 'string'.
  Overload 2 of 2, '(b: number): undefined', gave the following error.
    Argument of type 'string | number' is not assignable to parameter of type 'number'.
      Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/_caxnc/_caxnc-fn-0003.ts (2 errors) ====
    declare interface FooA {
        foo(b:string): "1",
        foo(b:number): undefined;
    };
    declare const obja: undefined | FooA;
    declare const arg: string | number;
    if (obja?.foo(arg)){
                  ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(b: string): "1" | undefined', gave the following error.
!!! error TS2769:     Argument of type 'string | number' is not assignable to parameter of type 'string'.
!!! error TS2769:       Type 'number' is not assignable to type 'string'.
!!! error TS2769:   Overload 2 of 2, '(b: number): undefined', gave the following error.
!!! error TS2769:     Argument of type 'string | number' is not assignable to parameter of type 'number'.
!!! error TS2769:       Type 'string' is not assignable to type 'number'.
        obja; // should be FooA
        arg; // should be string
        const x = obja.foo(arg); // x should be "1"
    }
    else if (obja) {
        arg; // should be number
        const x = obja.foo(arg); // x should be undefined
                           ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(b: string): "1"', gave the following error.
!!! error TS2769:     Argument of type 'string | number' is not assignable to parameter of type 'string'.
!!! error TS2769:       Type 'number' is not assignable to type 'string'.
!!! error TS2769:   Overload 2 of 2, '(b: number): undefined', gave the following error.
!!! error TS2769:     Argument of type 'string | number' is not assignable to parameter of type 'number'.
!!! error TS2769:       Type 'string' is not assignable to type 'number'.
    } else {
        obja; // should be undefined
    }
    